# robo-auto-aim

./: .clang-format  .clang-tidy  .gitignore  README.md  bench_mlp.py
.github/workflows/: ros_ci.yml
armor_detector/: CMakeLists.txt  README.md  package.xml
armor_detector/include/armor_detector/: armor.hpp  detector.hpp  detector_node.hpp  number_classifier.hpp  pnp_solver.hpp  yolo_detector.hpp
armor_detector/src/: detector.cpp  detector_node.cpp  number_classifier.cpp  pnp_solver.cpp  yolo_detector.cpp
armor_detector/test/: test_node_startup.cpp  test_number_cls.cpp
armor_tracker/: CMakeLists.txt  README.md  package.xml
armor_tracker/include/armor_tracker/: extended_kalman_filter.hpp  tracker.hpp  tracker_node.hpp
armor_tracker/src/: extended_kalman_filter.cpp  tracker.cpp  tracker_node.cpp
armor_tracker/test/: test_kalman_filter.cpp
auto_aim_interfaces/: CMakeLists.txt  package.xml
rm_auto_aim/: CMakeLists.txt  package.xml
rm_auto_aim/config/: armor_detector.yaml  armor_tracker.yaml
rm_auto_aim/launch/: sn_auto_aim.launch.py
train_classifier/: train.py
train_yolo/: dataset.yaml  train.py
