<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sn_auto_aim</name>
  <version>0.0.0</version>
  <description>Meta-package for the robo-aim auto-aiming system.</description>
  <maintainer email="scottowandmore@gmail.com">Scott Nguyen</maintainer>
  <license>MIT</license>
  <author email="scottowandmore@gmail.com">Scott Nguyen</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>auto_aim_interfaces</depend>
  <depend>armor_detector</depend>
  <depend>armor_tracker</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
